minor css fix for map top gap #1319

--- a/static/css/kobo-branding.css
+++ b/static/css/kobo-branding.css
@@ -309,3 +309,9 @@ td.published_forms__cell--project a:hover {
   text-align: center;
   font-family: 'Lato';  
 }
+
+/* Map margin override */
+
+#map_canvas {
+  margin-top: -15px;
+}
